--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
 
     <div class="px-4 py-5 my-5 text-center">
         <img class="d-block mx-auto mb-4" src="static\dog.png" alt="" width="230" height="200">
-        <h1 class="display-5 fw-bold">Welcome to Dog API!</h1>
+        <h1 class="display-5 fw-bold">Welcome to the Dog Encyclopedia!</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">The place where you can get various information about different dog breeds.</p>
         </div>
     </div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
+    
+    <p> {{data}}</p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"crossorigin="anonymous"></script>
 </body>
 </html>
