--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -7,7 +7,8 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">List of Dogs</a>
+          <a class="nav-link" href="#">Favorties</a>
         </div>
       </div>
     </div>
