Added "listOfDogs.html" and updated index and app.py

--- a/templates/listOfDogs.html
+++ b/templates/listOfDogs.html
@@ -21,8 +21,8 @@
     </div>
 
     <ul>
-        {% for attributes in dataArray %}
-        <li>{{attributes.name}}</li>
+        {% for datum in data %}
+        <li>{{datum.attributes}}</li>
         {% endfor %}
     </ul>
 
